--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
-    font: 20px Montserrat, sans-serif;
+    font: 20px Monaco, sans-serif;
     line-height: 1.8;
     color: slateblue;
+
+    /* it was Montserrat so can be changed back in necessary */
     
   }
 
