--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.8;
     color: slateblue;
 
-    /* it was Montserrat so can be changed back in necessary */
+    /* it was Montserrat so can be changed back in necessary -- ALSO ASK WHY THE COLOUR ISN'T CHANGING*/
     
   }
 
